modified:   About Us/Our Story-dummy.js 	modified:   About Us/Our story-dummy.css 	modified:   About Us/Our_Story-dummy.html

--- a/About Us/How it works-dummy.css
+++ b/About Us/How it works-dummy.css
@@ -84,7 +84,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: var(--secondary);
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
   cursor: pointer;
