--- a/About Us/Our story-dummy.css
+++ b/About Us/Our story-dummy.css
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: inherit;
+ 
 }
 
 :root {
@@ -22,12 +22,6 @@
 body {
   font-family: "Urbanist", sans-serif;
   background-color: var(--primary);
-}
-
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 16px;
 }
 
 /* Start: Navigation Bar */
@@ -232,10 +226,6 @@ body {
   position: relative;
 }
 
-::selection {
-  color: #925252;
-  background: #ff7979;
-}
 
 .testimonial-title {
   color: var(--light);
@@ -419,7 +409,7 @@ body {
   user-select: none;
 }
 
-.items .item {
+.items .partner-item {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -433,25 +423,25 @@ body {
   opacity: 0;
 }
 
-.item img {
+.partner-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.item.active {
+.partner-item.active {
   opacity: 1;
   z-index: 99;
   box-shadow: 0px 0px 105px -35px rgba(0, 0, 0, 0.75);
 }
 
-.item.prev {
+.partner-item.prev {
   z-index: 2;
   opacity: 0.25;
   transform: translate(-125%, -50%);
 }
 
-.item.next {
+.partner-item.next {
   z-index: 2;
   opacity: 0.25;
   transform: translate(25%, -50%);
@@ -523,7 +513,7 @@ body {
 }
 
 .footer-clean ul a {
-  color: inherit;
+  color: var(--primary);
   text-decoration: none;
   opacity: 0.8;
 }
@@ -534,6 +524,7 @@ body {
 
 .footer-clean .item.social {
   text-align: right;
+  color: var(--primary);
 }
 
 .social{
