--- a/About Us/Our story-dummy.css
+++ b/About Us/Our story-dummy.css
@@ -442,3 +442,24 @@ body {
   float: right;
 }
 
+/* CTA */
+
+.cta-ourstory {
+
+  margin-bottom: 5%;
+  text-align: center;
+  font-weight: 600;
+  font-family: 'Lato', sans-serif;
+  font-size: 22px;
+  background-color: var(--primary);
+  color: white;
+  border: solid 1px var(--secondary);
+
+}
+
+.cta-ourstory:hover{
+  border: solid 1px var(--light);
+  background-color: var(--primary);
+  color: white;
+  
+}
