--- a/index.css
+++ b/index.css
@@ -862,3 +862,9 @@ img {
   top: calc(-10% - 3px);
   left: calc(-10% - 3px);
 }
+
+.footer-clean {
+  background-color: var(--primary);
+  color: var(--light);
+}
+
