--- a/css/footer.css
+++ b/css/footer.css
@@ -84,4 +84,8 @@
   opacity: 0.6;
 }
 
-/* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
+.footer-clean {
+  background-color: var(--primary);
+  color: var(--light);
+}
+
