modified:   css/footer.css

--- a/css/footer.css
+++ b/css/footer.css
@@ -85,7 +85,6 @@
 }
 
 .footer-clean {
-  background-color: var(--primary);
-  color: var(--light);
+  background-color: var(--light);
+  color: var(primary);
 }
-
