--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -76,6 +76,7 @@ body {
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin-top: 5%;
 }
 
 .scholarships-banner {
@@ -308,7 +309,10 @@ body {
 
 /* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
 
-#private {
+#private,
+,
+#ngo,
+#government {
   line-height: 1.5;
 }
 
@@ -453,10 +457,22 @@ img {
   .posts-main-container {
     grid-template-columns: repeat(2, 1fr);
   }
+  #private,
+  #ngo,
+  #government {
+    margin-top: 18%;
+    margin-bottom: 5%;
+  }
 }
 @media (max-width: 768px) {
   .posts-main-container {
     grid-template-columns: 1fr;
+  }
+  #private,
+  #ngo,
+  #government {
+    margin-top: 15%;
+    margin-bottom: 5%;
   }
 }
 
