--- a/support/support.css
+++ b/support/support.css
@@ -162,6 +162,7 @@ body {
 /* Credits to https://epicbootstrap.com/snippets/footer-with-columns */
 
 #faqs {
+
   padding-top: 10%;
   background-image: linear-gradient(
     rgba(33, 150, 243, 0.5),
@@ -273,6 +274,10 @@ body {
 
   .answer p {
     font-size: 14px;
+  }
+
+  #faqs{
+    margin-top: 10%;
   }
 }
 
