--- a/index.css
+++ b/index.css
@@ -1314,16 +1314,16 @@ img {
   .card-feature {
     position: relative;
     width: 500px;
-    height: 300px;
+    height: 400px;
     padding: 40px 50px;
   }
 
   .card-feature:hover {
-    height: 750px;
+    height: 700px;
   }
 
   .card-feature:hover > .content {
-    transform: translateY(-500px);
+    transform: translateY(-350px);
   }
 
   .content p {
@@ -1333,6 +1333,7 @@ img {
   .content h2 {
     color: #7f9ead;
     font-family: "lato", sans-serif;
+    padding-top: 5%;
   }
 
   .cta-h3 {
