--- a/About-Us/Our story-dummy.css
+++ b/About-Us/Our story-dummy.css
@@ -354,7 +354,7 @@ body {
   color: var(--grey);
   font-family: "Montserrat", sans-serif;
 }
-.items {
+items {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -362,7 +362,7 @@ body {
   user-select: none;
 }
 
-.items .partner-item {
+.items .item {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -376,25 +376,25 @@ body {
   opacity: 0;
 }
 
-.partner-item img {
+.item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.partner-item.active {
+.item.active {
   opacity: 1;
   z-index: 99;
   box-shadow: 0px 0px 105px -35px rgba(0, 0, 0, 0.75);
 }
 
-.partner-item.prev {
+.item.prev {
   z-index: 2;
   opacity: 0.25;
   transform: translate(-125%, -50%);
 }
 
-.partner-item.next {
+.item.next {
   z-index: 2;
   opacity: 0.25;
   transform: translate(25%, -50%);
@@ -445,7 +445,7 @@ body {
 
 /* CTA */
 
-.cta-ourstory {
+/* .cta-ourstory {
 
   margin-bottom: 5%;
   text-align: center;
@@ -463,4 +463,96 @@ body {
   background-color: var(--primary);
   color: white;
   
+} */
+
+/* footer */
+.footer-clean {
+  padding: 50px 0;
+  background-color: #fff;
+  color: #4b4c4d;
+}
+
+.footer-clean h3 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.footer-clean ul {
+  padding: 0;
+  list-style: none;
+  line-height: 1.6;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.footer-clean ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer-clean ul a:hover {
+  opacity: 1;
+}
+
+.footer-clean .item.social {
+  text-align: right;
+}
+
+@media (max-width: 767px) {
+  .footer-clean .item {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-clean .item.social {
+    text-align: center;
+  }
+}
+
+.footer-clean .item.social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin-left: 10px;
+  margin-top: 22px;
+  color: inherit;
+  opacity: 0.75;
+}
+
+.footer-clean .item.social > a:hover {
+  opacity: 0.9;
+}
+
+@media (max-width: 991px) {
+  .footer-clean .item.social > a {
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer-clean .item.social > a {
+    margin-top: 10px;
+  }
+}
+
+.footer-clean .copyright {
+  margin-top: 14px;
+  margin-bottom: 0;
+  font-size: 13px;
+  opacity: 0.6;
+}
+
+.footer-clean {
+  background-color: var(--light);
+  color: var(primary);
 }
