modified:   About-Us/How it works-dummy.css modified:   About-Us/How_It_Works-dummy.html 	modified:   About-Us/Our story-dummy.css 	modified:   About-Us/Our_Story-dummy.html

--- a/About-Us/How it works-dummy.css
+++ b/About-Us/How it works-dummy.css
@@ -190,6 +190,17 @@ body {
     width: 100vw;
   }
 }
+
+/* How it works  */
+.Guides{
+  margin-top: 100px;
+}
+
+.Steps{
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  color: var(--light);
+}
 /*Our Team */
 .Team {
   text-align: center;
