--- a/About-Us/Our story-dummy.css
+++ b/About-Us/Our story-dummy.css
@@ -7,7 +7,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- 
 }
 
 :root {
@@ -59,10 +58,8 @@ body {
 
 /* End: Navigation Bar */
 
-
-
 /* Start:How We Started  */
-.Shared-stories {
+.how-we-started {
   text-align: center;
   width: 100%;
   padding-top: 5%;
@@ -76,9 +73,10 @@ body {
   color: var(--light);
   font-weight: 500;
   text-align: center;
+  padding: 5% 5%;
 }
 
-.story-container{
+.story-container {
   border-radius: 5%;
 }
 
@@ -116,18 +114,16 @@ body {
   backdrop-filter: blur(5px);
   opacity: 0.9;
   border: solid 1px var(--secondary);
-}
-
-
-.mvc-container {
-  display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  background-image: linear-gradient(
-    var(--primary) 40%,
-    rgba(33, 150, 243, 0.5)
-  );
+  background-image: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5)),
+    url(/assets/educ.jpg);
+}
+
+.mvc-container {
+  display: flex;
+
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -136,7 +132,7 @@ body {
 
 .mvc-features {
   position: relative;
-  height: 300px;
+  height: 500px;
   border-radius: 10px;
   transition: 0.3s;
   padding: 40px 50px;
@@ -144,12 +140,11 @@ body {
   margin-top: 3%;
   margin-left: 1.5%;
   margin-bottom: 5%;
-
 }
 
 .mvc-name {
   color: var(--secondary);
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 500;
   font-size: 24px;
 }
@@ -174,172 +169,197 @@ body {
 
 /* End: mvc  */
 
-/* Start: What We Provide Section */
+/* What Makes Us Different?  */
 
-.what-we-provide {
-  max-width: 1200px;
-  width: 100%;
-  padding: 0 16px;
-  margin: 48px auto;
+#testimonials {
+  background: linear-gradient(rgba(13, 117, 202, 0.5), var(--primary) 40%);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
 }
 
-.title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  margin-bottom: 36px;
+::selection {
+  color: #925252;
+  background: #ff7979;
+}
+
+.testimonial-title {
   color: var(--light);
-  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  padding-top: 5%;
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
+  max-width: 1080px;
+  margin: 50px auto;
+  padding: 0px 20px;
   position: relative;
-  grid-gap: 16px;
 }
 
-.card {
-  padding: 24px;
-  border-radius: 12px;
-  color: var(--primary);
-  max-width: calc(50% - 30px);
-  position: relative;
-  background-color: #0b305a;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-}
-
-.card:hover {
-  transform: scale(1.05);
-  transition: all 0.3s ease-in-out;
-}
-.card:nth-child(odd) {
-  align-self: flex-end;
-}
-
-.card::before {
-  content: "";
+.wrapper .center-line {
   position: absolute;
-  top: 12px;
-  border: 12px solid;
-}
-
-.card:nth-child(odd)::before {
-  right: 100%;
-  border-color: transparent var(--light) transparent transparent;
-}
-
-.card:nth-child(even)::before {
-  left: 100%;
-  border-color: transparent transparent transparent var(--light);
-}
-
-.card h3 {
-  font-family: "lato", sans-serif;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 500;
-  margin-bottom: 10px;
-  color: var(--secondary);
-}
-
-.card p {
-  margin-bottom: 16px;
-  color: var(--light);
-  text-align: justify;
-  font-size: 16px;
-  font-family: "Rubik";
-}
-
-.card .time {
-  font-size: 14px;
-  color: var(--grey);
-}
-
-.card .dot {
-  position: absolute;
-  top: 16px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
+  height: 100%;
+  width: 4px;
   background: var(--secondary);
-}
-
-.card:nth-child(even) .dot {
-  left: calc(100% + 22px);
-}
-
-.card:nth-child(odd) .dot {
-  right: calc(100% + 22px);
-}
-
-.line {
-  position: absolute;
-  top: 16px;
-  bottom: 0;
   left: 50%;
+  top: 20px;
   transform: translateX(-50%);
-  width: 2px;
+}
+
+.wrapper .row {
+  display: flex;
+}
+
+.wrapper .row-1 {
+  justify-content: flex-start;
+}
+
+.wrapper .row-2 {
+  justify-content: flex-end;
+}
+
+.wrapper .row section {
+  background: #fff;
+  border-radius: 5px;
+  width: calc(50% - 40px);
+  padding: 20px;
+  position: relative;
+}
+
+.wrapper .row section::before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
   background: var(--secondary);
+  top: 28px;
+  z-index: -1;
+  transform: rotate(45deg);
 }
 
-@media screen and (max-width: 768px) {
-  .line {
-    left: 12px;
+.row-1 section::before {
+  right: -7px;
+}
+
+.row-2 section::before {
+  left: -7px;
+}
+
+.row section .icon,
+.center-line .scroll-icon {
+  position: absolute;
+  background: #f2f2f2;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--secondary);
+  font-size: 17px;
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+
+.center-line .scroll-icon {
+  bottom: 0px;
+  left: 50%;
+  font-size: 25px;
+  transform: translateX(-50%);
+}
+
+.row-1 section .icon {
+  top: 15px;
+  right: -60px;
+}
+
+.row-2 section .icon {
+  top: 15px;
+  left: -60px;
+}
+
+.row section .details,
+.row section .bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.row section .details {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.bottom {
+  font-family: "latoregular", sans-serif;
+  font-weight: 500;
+}
+
+.row section p {
+  margin: 10px 0 17px 0;
+  font-family: "latoregular", sans-serif;
+}
+
+.row section .bottom a:hover {
+  transform: scale(0.97);
+}
+
+.testi-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+
+@media (max-width: 790px) {
+  .wrapper .center-line {
+    left: 40px;
   }
 
-  .card:nth-child(odd) {
-    align-self: flex-start;
+  .wrapper .row {
+    margin: 30px 0 3px 60px;
   }
 
-  .wrapper {
-    padding-left: 42px;
+  .wrapper .row section {
+    width: 100%;
   }
 
-  .card:nth-child(even) .dot {
-    right: calc(100% + 22px);
-    left: unset;
+  .row-1 section::before {
+    left: -7px;
   }
 
-  .card:nth-child(even)::before {
-    right: 100%;
-    left: unset;
-    border-color: transparent var(--light) transparent transparent;
-  }
-
-  .card {
-    max-width: 100%;
+  .row-1 section .icon {
+    left: -60px;
   }
 }
 
-@media screen and (max-width: 420px) {
-  .line,
-  .card .dot,
-  .card::before {
+@media (max-width: 440px) {
+  .wrapper .center-line,
+  .row section::before,
+  .row section .icon {
     display: none;
   }
 
-  .wrapper {
-    padding-left: 0;
+  .wrapper .row {
+    margin: 10px 0;
   }
 }
-
-/* End: What We Provide Section */
-
-
 
 /* Partnered NGo's  */
 .partners {
   margin-top: 10%;
-  height: 300px;
+  height: 400px;
   margin-bottom: 10%;
 }
 .FP {
+  margin-top: 10%;
   text-align: center;
   color: var(--grey);
   font-family: "Montserrat", sans-serif;
 }
-items {
+.items {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -347,7 +367,7 @@ items {
   user-select: none;
 }
 
-.items .item {
+.items .partner-logo {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -361,25 +381,25 @@ items {
   opacity: 0;
 }
 
-.item img {
+.partner-logo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.item.active {
+.partner-logo.active {
   opacity: 1;
   z-index: 99;
   box-shadow: 0px 0px 105px -35px rgba(0, 0, 0, 0.75);
 }
 
-.item.prev {
+.partner-logo.prev {
   z-index: 2;
   opacity: 0.25;
   transform: translate(-125%, -50%);
 }
 
-.item.next {
+.partner-logo.next {
   z-index: 2;
   opacity: 0.25;
   transform: translate(25%, -50%);
@@ -431,23 +451,20 @@ items {
 /* CTA */
 
 .cta-ourstory {
-
   margin-bottom: 5%;
   text-align: center;
   font-weight: 600;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 22px;
   background-color: var(--primary);
   color: white;
   border: solid 1px var(--secondary);
-
 }
 
-.cta-ourstory:hover{
+.cta-ourstory:hover {
   border: solid 1px var(--light);
   background-color: var(--primary);
   color: white;
-  
 }
 
 /* footer */
