--- a/index.css
+++ b/index.css
@@ -1630,3 +1630,39 @@ img {
 }
 
 
+/* IMAGE */
+
+#featured-on{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+.image-container {
+  overflow-x: hidden;
+  max-width: 768px;
+}
+.image-wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% - (1.5rem * (var(--per-view) - 1))) / var(--per-view));
+  grid-gap: 1.5rem;
+  position: relative;
+  left: 0;
+  transition: .3s;
+  scroll-behavior: smooth;
+}
+.image-wrapper > * {
+  aspect-ratio: 4 / 3;
+}
+.featured-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+  border-radius: .5rem;
+}
+/* IMAGE */
+
