--- a/index.css
+++ b/index.css
@@ -1651,7 +1651,7 @@ img {
 .image-wrapper {
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc((100% - (1.5rem * (var(--per-view) - 1))) / var(--per-view));
+  grid-auto-columns: calc((100% - (1.5rem * (var(--per-view) -1))) / var(--per-view));
   grid-gap: 1.5rem;
   position: relative;
   left: 0;
