--- a/index.css
+++ b/index.css
@@ -716,7 +716,7 @@ img {
   font-family: "Rubik";
 }
 
-.success-footer {
+.success-footer1 {
   margin-top: 1%;
   color: white;
   text-align: center;
