--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -223,7 +223,7 @@ body {
 /* Start: Footer */
 
 .footer-container {
-  background-color: var(--light);
+  background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
 }
 
 .footer-clean {
@@ -316,10 +316,10 @@ body {
 /* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
 
 #private,
-,
 #ngo,
 #government {
   line-height: 1.5;
+  background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
 }
 
 img {
