--- a/css/affiliate.css
+++ b/css/affiliate.css
@@ -1,39 +1,40 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 
 :root {
-    --primary: #0a2647;
-    --secondary: #ffb100;
-    --dark-1: #161819;
-    --dark-2: #252728;
-    --grey: #aaa;
-    --light: #fff;
-  }
-  
-body{
+  --primary: #0a2647;
+  --secondary: #ffb100;
+  --dark-1: #161819;
+  --dark-2: #252728;
+  --grey: #aaa;
+  --light: #fff;
+}
+
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 50px;
   text-align: center;
 }
-.container-aff{
+
+.container-aff {
   height: 250px;
   width: 250px;
   overflow: hidden;
   margin: 50px auto;
   border-radius: 50%;
   transition: all 0.3s ease-in-out;
-  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
-  background: var(--primary);
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
 }
-.container-aff:hover{
+.container-aff:hover {
   height: 470px;
   width: 350px;
   border-radius: 5px;
-  box-shadow: 0px 1px 35px 0px #aaa(0,0,0,0.3);
+  box-shadow: 0px 1px 35px 0px #aaa(0, 0, 0, 0.3);
 }
-.container-aff .wrapper img{
+.container-aff .wrapper img {
   position: relative;
   z-index: 20;
   border-radius: 50%;
@@ -45,41 +46,41 @@ body{
   margin: 20px auto;
   transition: all 0.3s ease;
 }
-.container-aff:hover .wrapper img.active{
+.container-aff:hover .wrapper img.active {
   height: 470px;
   width: 350px;
   margin: 0px auto;
   border: none;
   border-radius: 5px;
 }
-.wrapper .title{
+.wrapper .title {
   color: #fff;
   font-size: 30px;
   font-weight: 500;
   padding: 10px;
   line-height: 25px;
 }
-.wrapper .place{
+.wrapper .place {
   color: #fff;
   font-size: 17px;
   line-height: 0px;
   margin: 10px 0;
 }
-.content{
+.content {
   color: #fff;
   font-size: 17px;
   margin-top: 10px;
-  padding: 1px 20px 10px 20px!important;
+  padding: 1px 20px 10px 20px !important;
 }
-.content .buttons{
+.content .buttons {
   display: flex;
 }
-.buttons .btn{
+.buttons .btn {
   height: 40px;
   width: 150px;
   margin: 0 5px;
 }
-.buttons .btn button{
+.buttons .btn button {
   height: 80%;
   width: 80%;
   background: var(--secondary);
@@ -91,19 +92,19 @@ body{
   border-radius: 5px;
   transition: all 0.3s;
 }
-.btn button:hover{
+.btn button:hover {
   transform: scale(0.95);
 }
-.container-aff .icons{
+.container-aff .icons {
   position: relative;
   margin-top: -435px;
   margin-left: 10px;
   list-style: none;
 }
-.container-aff .icons.active{
+.container-aff .icons.active {
   display: none;
 }
-.container-aff .icons li{
+.container-aff .icons li {
   height: 40px;
   width: 40px;
   margin: 5px 0;
@@ -111,17 +112,17 @@ body{
   margin-left: -100px;
   transition: all 0.5s ease;
 }
-.container-aff:hover .icons li{
+.container-aff:hover .icons li {
   opacity: 1;
   margin-left: 7px;
 }
-.container-aff:hover .icons li:nth-child(2){
+.container-aff:hover .icons li:nth-child(2) {
   transition-delay: 0.2s;
 }
-.container-aff:hover .icons li:nth-child(3){
+.container-aff:hover .icons li:nth-child(3) {
   transition-delay: 0.4s;
 }
-.container-aff .icons li a{
+.container-aff .icons li a {
   color: #7b00e0;
   height: 100%;
   width: 100%;
@@ -131,52 +132,52 @@ body{
   line-height: 40px;
   transition: all 0.3s;
 }
-.container-aff .icons li a:hover{
+.container-aff .icons li a:hover {
   transform: scale(0.9);
 }
 
 /*Hero*/
 
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/hero\ affiliates.png");
-    height: 80%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-  
-  .hero-text button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: black;
-    background-color: #ddd;
-    text-align: center;
-    cursor: pointer;
-  }
-  
-  .hero-text button:hover {
-    background-color: #555;
-    color: white;
-  }
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  /*-----------------------*/
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/hero\ affiliates.png");
+  height: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
-  
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
+
+/*-----------------------*/
