--- a/support/support.css
+++ b/support/support.css
@@ -407,10 +407,10 @@ textarea.input {
   margin-right: 0.7rem;
 }
 
-.social-media {
+/* .social-media {
   padding: 2rem 0 0 0;
   text-align: left;
-}
+} */
 
 .social-media p {
   color: #333;
@@ -677,7 +677,7 @@ ul.no-bullets {
   padding-top: 20px;
   margin-bottom: 10px;
   color: var(--primary);
-  font-family: 'Lato', sans-serif;';
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: 500;
 }
