--- a/mentors/metorsII.css
+++ b/mentors/metorsII.css
@@ -1,106 +1,174 @@
-*{
+* {
     margin: 0;
     padding: 0;
-
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
-.baddy{
+
+body {
     min-height: 100vh;
-    background-color:  #0a2647;
+    background-color:#005;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
 }
-main.table{
+
+td img {
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+
+table,
+th,
+td {
+    padding: 1rem;
+     
+}
+
+
+main.table {
     width: 82vw;
     height: 90vh;
     background-color: #fff;
+    box-shadow: 0.4rem .8rem #005;
+    overflow: hidden;
 }
-.table_header{
+
+.table_header {
     width: 100%;
     height: 10%;
-    background-color: #fff4;
+    background-color: gold;
     padding: .8rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.table_body{
-  width: 95%;
-  max-height: calc(89% - 1.6rem);
-  margin: .8rem auto;
-  border-radius: .6rem;
-  overflow: auto;
+
+.table_header .input-group{
+    width:35%;
+    height: 100%;
+    background-color: #fff;
+    padding: 0 .8rem; 
+     border-radius: 2rem;
+    display: flex;
+    align-items: center;
+    transition: .2s;
+}
+.table_header .input-group:hover{
+    width:45%;
+    background-color: #fff7;
+    box-shadow: 0 .1rem .4rem #0002;
+}
+
+
+
+
+
+.table_header .input-group img {
+    width: 1.2rem;
+    height: 1.2rem;
 
 }
-.table_body::-webkit-scrollbar{
+
+.table_header .input-group input{
+    width: 100%;
+    padding: 0 .5rem 0.3rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+
+}
+
+.table_body {
+    width: 95%;
+    max-height: calc(89% - 1.6rem);
+    background-color: #005;
+    color: #fff;
+    margin: .8rem auto;
+    border-radius: .6rem;
+    overflow: auto;
+}
+
+.table_body::-webkit-scrollbar {
     width: 0.5rem;
     height: 0.5rem;
 }
-.table_body::-webkit-scrollbar-thumb{
+
+.table_body::-webkit-scrollbar-thumb {
     border-radius: .5rem;
     background-color: #000400;
     visibility: hidden;
 }
-.table_body:hover:-webkit-scrollbar-thumb{
+
+.table_body:hover::-webkit-scrollbar-thumb {
     visibility: visible;
 }
-table{
+
+table {
     width: 100%;
-
 }
 
 
-td img {
-    width: 36px;
-    height: 36px;
-    margin-right: .5rem;
-    border-radius: 50%;
 
-    vertical-align: middle;
-}
 
-table , .label, .label3{
-    padding: 1rem;
-    border-collapse: collapse;
-    font-family: serif;
-}
-.thead-II, .label{
+thead th {
     position: sticky;
     top: 0;
     left: 0;
-    background-color: gray;
-    font-family: serif;
-    color: gold;
+    background-color: gold;
+    
 }
-tbody.tr:nth-child(even){
+
+tbody.tr:nth-child(even) {
     background-color: #0004;
 }
-tbody tr:hover{
+
+tbody tr.hide{
+    opacity: 0;
+    transform: translateX(100%);
+}
+
+tbody tr{
+ --delay:.1s;
+ transition: .5s ease-in-out var(--delay);
+}
+
+tbody tr:hover {
     background-color: #fff6;
 }
-.status{
-    
-   background-color: red;
-   text-align: center;
-   padding: .4rem 0;
-   border-radius: 2rem;
+
+.status {
+    background-color: red;
+    text-align: center;
+    padding: .4rem 0;
+    border-radius: 50px;
+    /* Adjust the border-radius value to achieve the oval shape */
+    display: inline-block;
+    width: 120px;
+    /* Adjust the width as needed */
 }
-.status-avail{
+
+.status-avail {
     padding: .4rem 0;
     border-radius: 2rem;
     background-color: #86e49d;
     color: #006b21;
     text-align: center;
+    display: inline-block;
+    width: 120px;
+    position:relative;
+    /* Adjust the width as needed */
 }
+
+
 @media (max-width: 1000px) {
-    td:not(:first-of-type){
+    td:not(:first-of-type) {
         min-width: 12.1rem;
     }
-    
-}
-.ment{
-    font-family: serif;
-    background-color: #0a2647;
-    color: gold;
 }
